tests/miniJava/neg/000062_mutation.MiniJava
class java { false static void Main ( String [ ] java ) { { } } }
